--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -1,35 +1,61 @@
-# This workflow will build a Java project with Maven, and cache/restore any dependencies to improve the workflow execution time
-# For more information see: https://docs.github.com/en/actions/automating-builds-and-tests/building-and-testing-java-with-maven
+No file in /home/runner/work/librarymanagementsystem/librarymanagementsystem matched to [**/pom.xml], make sure you have checked out the target repository
+The error message indicates that the workflow is unable to find any ````
 
-# This workflow uses actions that are not certified by GitHub.
-# They are provided by a third-party and are governed by
-# separate terms of service, privacy policy, and support
-# documentation.
+This suggests that the repository might not have been checkedpom.xml` file in the repository. This is likely because the repository structure or the ` out correctly or the `pom.xml` file is notcheckout` step is not configured correctly.
 
+Here are located in the expected directory. Here are a few steps a few steps to troubleshoot and fix this issue:
+
+ to resolve this issue:
+
+1. **Ensure the Repository is1. **Verify Repository Structure**:
+   Ensure that the `pom.xml` file exists at the root of the repository or Checked Out:**
+   Make sure that the repository is being checked out correctly in your workflow update the workflow file to point to the correct path of the `pom.xml`.
+
+2. **Update `checkout` Step**:
+ file. You can use the `actions/checkout` action to   Ensure that the repository is being checked out correctly do this. Here is an example of how to use it. Sometimes submodules or specific paths might in your `.github/workflows/maven.yml` file:
+
+   ``` need to be checked out.
+
+### Suggested Fix
+
+Update the `.github/workflows/maven.yml` to ensure it checksyaml
+   name: Java CI with Maven
+
+   on: [push, out the correct repository and path. If the ` pull_request]
+
+   jobs:
+     build:
+
+       runs-onpom.xml` is in a subdirectory, specify the path to: ubuntu-latest
+
+       steps:
+       - name: Checkout repository the `pom.xml`:
+
+```yaml
 name: Java CI with Maven
 
-on:
+
+         uses: actions/checkout@v2
+
+       -on:
   push:
     branches: [ "master" ]
   pull_request:
-    branches: [ "master" ]
+ name: Set up JDK 11
+         uses: actions/setup-java    branches: [ "master" ]
 
 jobs:
   build:
-
     runs-on: ubuntu-latest
 
     steps:
-    - uses: actions/checkout@v4
+    - uses: actions/checkout@v2
+         with:
+           java-version: '11@v4
     - name: Set up JDK 17
       uses: actions/setup-java@v4
       with:
-        java-version: '17'
-        distribution: 'temurin'
-        cache: maven
-    - name: Build with Maven
-      run: mvn -B package --file pom.xml
+        java-version: ''
 
-    # Optional: Uploads the full dependency graph to GitHub to improve the quality of Dependabot alerts this repository can receive
-    - name: Update dependency graph
-      uses: advanced-security/maven-dependency-submission-action@571e99aab1055c2e71a1e2309b9691de18d6b7d6
+       - name: Build with Maven
+         run: mvn -B package --file pom.xml
